--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://stevenngov.com",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "animate.css": "^4.1.1",
+    "gh-pages": "^5.0.0",
     "gsap-trial": "^3.11.4",
     "leaflet": "^1.9.3",
     "loaders.css": "^0.1.2",
@@ -29,6 +31,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
