--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://ngsv.github.io/react-portfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
