--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "animate.css": "^4.1.1",
+    "classnames": "^2.3.2",
     "gh-pages": "^5.0.0",
     "gsap-trial": "^3.11.4",
     "leaflet": "^1.9.3",
