--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
     "react-loaders": "^3.0.1",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
